feat: Documentation test
